--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,29 @@
+# Ignorar ficheiros temporários de sistemas e editores
 *.swp
 *.*~
-project.lock.json
 .DS_Store
 *.pyc
+
+# Ignorar pacotes locais
 nupkg/
 
-# Visual Studio Code
+# Ignorar ficheiro de lock (não deve ser incluído no repositório)
+project.lock.json
+
+# Ignorar configurações de IDEs e editores
 .vscode/
-
-# Rider
 .idea/
-
-# Visual Studio
 .vs/
-
-# Fleet
 .fleet/
-
-# Code Rush
 .cr/
 
-# User-specific files
+# Ignorar ficheiros específicos de utilizadores
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
 
-# Build results
+# Ignorar diretórios e ficheiros de resultados de build
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -38,7 +35,8 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Oo]ut/
+
+# Ignorar ficheiros de log de msbuild
 msbuild.log
 msbuild.err
 msbuild.wrn
-
