--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ Grupo2A.AssemblyInfo.cs
 # Ignore cache files
 Grupo2A.AssemblyInfoInput.cache
 
+# Ignorar a pasta da base de dados
+Grupo2A/Database/
