--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ Grupo2A.AssemblyInfo.cs
 
 # Ignore cache files
 Grupo2A.AssemblyInfoInput.cache
+
+# Ignorar a pasta da base de dados
+Grupo2A/Database/
+Grupo2A/Database/CozinhaDB
